assets/css/main.css
/* ... */
	.color-var {
	  -webkit-transform: scale(0, 0);
	          transform: scale(0, 0);
	  width: 40px;
	  height: 40px;
	  margin: 10px;
	  border-width: 2px;
	  border-style: solid;
	  border-color: #eee; 
	}
	.color-var.visible {
		-webkit-transition: all .4s;
		transition: all .4s;
	  -webkit-transform: scale(1, 1);
	          transform: scale(1, 1);
	}
	.color-var.active {
	  -webkit-transform: scale(1.4, 1.4);
	          transform: scale(1.4, 1.4);
	          border-width: 0px;
	}


/*h.  Featurette*/
.frow {
    overflow: hidden;
}
    .feature {
    color: #BB1E1E;
    font-weight: 300;
    text-align: center;
    padding: 0 10px;
}
    .fcol-2 {
    width: 16.66665%;
}
    .fcol-4 {
    width: 33.33333%;
}
    .fcol-8 {
    width: 66.66666%;
}
    .fcol {
    display: block;
    float: left;
}
    .feature .feature-number {
    font-size: 48px;
    line-height: 70px;
    font-weight: normal;
}
    .feature .feature-description {
    margin-top: 10px;
    font-size: 20px;
    line-height: 1.3;
}

h2, h4{
    text-transform: uppercase;
}
.portdesc{
    border-bottom: none;
}
.portdesc h4{
    text-transform: capitalize;
}

/******************************************
 i.   text and color transformations
*******************************************/

.textupper{ text-transform: uppercase;}
.textlower{ text-transform: lowercase;}
.textcaps{  text-transform: capitalize;}
.textsuper{ vertical-align: super;}
.textcenter{ text-align: center;}

.red{   color: #BB1E1E;}
.black{ color: #000000;}
.notred{    color: #1e8ffe;}

.notif-red{
    box-sizing: border-box;
    max-width: 50rem;
    overflow: hidden;
    background-color: #ffe7e8;
    border-left-color: #F44336;
    border-left-width: 10px;
    border-left-style: solid;
    border-top-right-radius: 10px;
    border-bottom-right-radius: 10px;
    padding-left: 2em;
    padding-right: 0.4em;
    padding-bottom: 0.5em;
    padding-top: 0.5em;   
    font-size: smaller;
}
.notif-blue{
    box-sizing: border-box;
    max-width: 50rem;
    overflow: hidden;
    background-color: #e7ecff;
    border-left-color: #1e8ffe;
    border-left-width: 10px;
    border-left-style: solid;
    border-top-right-radius: 10px;
    border-bottom-right-radius: 10px;
    padding-left: 2em;
    padding-right: 0.4em;
    padding-bottom: 0.5em;
    padding-top: 0.5em;   
    font-size: smaller;
}
.privacypolicy{
    text-decoration: none; 
    border-bottom-style: dashed; 
    border-bottom-width: 2px;
    margin-left: 4em;
    margin-right: 4em;
}
.browserchrome:hover{
    color: yellow;
    line-height: inherit;
}

.browserff:hover{
    color: orange;
    line-height: inherit;
}

.browsersafari:hover{
    color: deepskyblue;
    line-height: inherit;
}

/*j. contact form*/
.contact-letter form label{
		color: inherit;
		display: inline-flex;
		font-size: 1em;
		font-weight: 400;
		margin: 0 0 0 0;
	}
.contact-letter form input[type="text"], 
    input[type="tel"],
	input[type="password"],
	input[type="email"],
	select,
	textarea {
		border: none;
		color: inherit;
		display: inline-flex;
		outline: 0;
		padding: 0.4em 0.2em 0.1em 0.2em;
		text-decoration: none;
		width: auto;
	    border-bottom-color: #000;
        border-bottom-style: dashed;
        border-bottom-width: 2px;
        border-bottom-left-radius: 0;
        border-bottom-right-radius: 0;
        min-width: 40px;
        max-width:99.99%!important;
        transition: width 0.25s;
        text-align:left;
        background-color: transparent;
        
	}
    
.contact-letter form input[type="text"]:focus,
		input[type="password"]:focus,
        input[type="tel"]:focus,
		input[type="email"]:focus,
		select:focus,
		textarea:focus {
			border-bottom-style: solid;
            border-bottom-width: 3px;
            border-bottom-color: #f74770;
		}
.contact-letter form input[type="text"],
    input[type="tel"],
	input[type="password"],
	input[type="email"],
	select {
		height: inherit;
	}
.contact-letter{
    background-color:#ead5b1;
    padding: 3.5em 1.5em 1.5em 3em;
    background-attachment: scroll;
    border-top-left-radius: 1em;
    border-bottom-right-radius: 1em;
}

/*k.  search new*/
.search--form {
  position: relative;
  width: 50px;
  height: 50px;
  overflow: hidden;
	transition: width 0.5s;
  margin: auto;
	-webkit-backface-visibility: hidden;
	backface-visibility: hidden;
  background: rgba(0, 0, 0, 0);
}

.search--form.opened {
  width: 300px;
}
.search--form.opened:before {
  position: fixed;
  content: "";
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba(0, 0, 0, 0.2);
}

input[type="search"] {
  position: absolute;
  top: 0; 
  right: 20px;
  height: 50px;
  width: 0;
  float:left;
  font-size: 1em;
  border-radius: 30px;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
  outline: none;
  border: none;
  padding-left: 20px;
  color: #861033;
	transition: width 0.5s;
}

.search--form.opened input[type="search"] {
  width: 270px;
	transition: width 0.5s;
}

.search--button {
  position: absolute;
  top: 0;
  right: 0;
  width: 50px;
  height: 50px;
  background: #861033;
  border: none;
  border-radius: 30px;
  color: #FFF;
  font-size: 1.2em;
  outline: none;
  cursor: pointer;
}

.search--form.opened .search--button {
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
}

/*l.  SOCIAL HANDLES */

.social-platform-container {
	position: relative;
	width: 50%;
	/*background-color: red; to classes for each social media*/
  }
  
  .social-icon-block {
	display: block;
	width: auto;
	height: auto;
	padding: 2rem;
	text-align: center;
  }
  
  .social-overlay {
	position: absolute;
	bottom: 0;
	left: 0;
	right: 0;
	background-color: #008CBA;
	overflow: hidden;
	width: 100%;
	height: 0;
	transition: .5s ease;
  }
  
  .social-platform-container:hover .social-overlay {
	height: 50%;
  }
/* ... */

